[project]
name = "controlnet-lllite-comfyui"
description = "Nodes: LLLiteLoader"
version = "1.0.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/kohya-ss/ControlNet-LLLite-ComfyUI"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ControlNet-LLLite-ComfyUI"
Icon = ""
